[gd_scene load_steps=7 format=3 uid="uid://c7mbakqa4qj8u"]

[ext_resource type="Script" path="res://scenes/end_of_day.gd" id="1_it3t8"]
[ext_resource type="Texture2D" uid="uid://dwd4g0d4qpvan" path="res://assets/inventory/large_board.png" id="1_pfyfw"]
[ext_resource type="Texture2D" uid="uid://c8kc1n2d7f60e" path="res://assets/items/milk_white.png" id="2_w4kod"]
[ext_resource type="Texture2D" uid="uid://sa81luafs3yr" path="res://assets/items/item_20.png" id="3_256el"]
[ext_resource type="FontFile" uid="uid://bb31u1jsyyk73" path="res://assets/monogram.ttf" id="3_kwva7"]
[ext_resource type="Texture2D" uid="uid://05o5y7hllhon" path="res://assets/pixel_coin.png" id="5_1yoxg"]

[node name="EndOfDay" type="CanvasLayer"]
script = ExtResource("1_it3t8")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -445.0
offset_top = -460.0
offset_right = 445.0
offset_bottom = 460.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_pfyfw")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -330.5
offset_top = 76.0
offset_right = 344.5
offset_bottom = 179.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.396078, 0.192157, 0.0666667, 1)
theme_override_fonts/font = ExtResource("3_kwva7")
theme_override_font_sizes/font_size = 120
text = "Day 1 Complete!"

[node name="Label3" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -132.0
offset_top = -678.0
offset_right = 121.0
offset_bottom = -623.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.396078, 0.192157, 0.0666667, 1)
theme_override_fonts/font = ExtResource("3_kwva7")
theme_override_font_sizes/font_size = 60
text = "Daily Stats"

[node name="GridContainer" type="GridContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -323.0
offset_top = -152.0
offset_right = -186.0
offset_bottom = -129.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
columns = 3

[node name="TextureRect" type="TextureRect" parent="TextureRect/GridContainer"]
layout_mode = 2
texture = ExtResource("2_w4kod")
expand_mode = 2

[node name="Label" type="Label" parent="TextureRect/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kwva7")
theme_override_font_sizes/font_size = 25
text = "Milk Sold:"

[node name="MilkOrders" type="Label" parent="TextureRect/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kwva7")
theme_override_font_sizes/font_size = 25
text = "15"

[node name="GridContainer2" type="GridContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -314.0
offset_top = -32.0
offset_right = -175.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
columns = 3

[node name="TextureRect" type="TextureRect" parent="TextureRect/GridContainer2"]
layout_mode = 2
texture = ExtResource("3_256el")
expand_mode = 2

[node name="Label" type="Label" parent="TextureRect/GridContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kwva7")
theme_override_font_sizes/font_size = 25
text = "Veg Grown:"

[node name="VegGrown" type="Label" parent="TextureRect/GridContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kwva7")
theme_override_font_sizes/font_size = 25
text = "15"

[node name="GridContainer3" type="GridContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -323.0
offset_top = 96.0
offset_right = -156.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)
columns = 3

[node name="TextureRect" type="TextureRect" parent="TextureRect/GridContainer3"]
layout_mode = 2
texture = ExtResource("5_1yoxg")
expand_mode = 2

[node name="Label" type="Label" parent="TextureRect/GridContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kwva7")
theme_override_font_sizes/font_size = 25
text = "Coins Earned:"

[node name="Coins" type="Label" parent="TextureRect/GridContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kwva7")
theme_override_font_sizes/font_size = 25
text = "15"

[node name="Label2" type="Label" parent="TextureRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -301.5
offset_top = -160.0
offset_right = 325.5
offset_bottom = -118.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_kwva7")
theme_override_font_sizes/font_size = 50
text = "Press Enter to start the next day"
